[package]
name = "kcl-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
env_logger = "0.9.3"
ropey = "1.3.2"
# serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0"}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"
kclvm-ast = {path = "../../../ast", version = "0.1.0"}
kclvm-tools = {path = "../../../tools"}
kclvm-parser = {path = "../../../parser", version = "0.1.0"}
kclvm-compiler = {path = "../../../compiler", version = "0.1.0"}
kclvm-sema = {path = "../../../sema", version = "0.1.0"}
kclvm-error = {path = "../../../error", version = "0.1.0"}

[debug]
incremental = true
